--- a/index.css
+++ b/index.css
@@ -73,7 +73,7 @@ ul li{
     box-shadow: 0px 0px 5px black;
     text-align: center;
     color: whitesmoke;
-    background-image: linear-gradient(#392F5A,black);
+    background-image: linear-gradient(to bottom right,#F7F8F8,#ACBB78);
     transition-delay: 6s ease-in-out 1s;
 }
 
