--- a/index.css
+++ b/index.css
@@ -29,13 +29,14 @@ img{
 
 input{
     color: #432000;
-    background-color: #DCE1EB;
+    background-color: white;
     border: 0;
     padding: 15px;
     border-radius: 8px;
     font-size: 20px;
     text-align: center;
     margin:10px auto; 
+    box-shadow: 0px 0px 3px #00416A;
 }
 
 button{
@@ -51,7 +52,7 @@ button{
 
 button:hover{
     cursor: pointer;
-    background-color: #DCE1EB;
+    background-color: white;
     color: #AC485A;
     border:2px solid #AC485A;
 }
@@ -72,7 +73,7 @@ ul li{
     border-radius: 8px;
     box-shadow: 0px 0px 5px black;
     text-align: center;
-    color: whitesmoke;
+    color: #00416A;
     background-image: linear-gradient(to bottom right,#F7F8F8,#ACBB78);
     transition-delay: 6s ease-in-out 1s;
 }
