--- a/index.css
+++ b/index.css
@@ -72,8 +72,8 @@ ul li {
   border-radius: 8px;
   box-shadow: 0px 0px 5px black;
   text-align: center;
-  color: #00416a;
-  background-image: linear-gradient(to bottom right, whitesmoke, #392f5a);
+  color: white;
+  background-image: linear-gradient(to bottom right, #ad5389, #3c1053);
   transition-delay: 6s ease-in-out 1s;
 }
 
